# cc-api

./: .env.example  .gitignore  BUGS.md  ROADMAP.md  main.py  pyproject.toml
src/: agent.py  main.py  prompts.py
src/agent/: agent.py  config.py  prompts.py
src/api/: deps.py  middleware.py  schemas.py
src/api/v1/: calls.py  logs.py  patients.py
src/db/: database.py  entities.py  repositories.py
src/static/: index.html
tests/: test_api.py  test_call_simulation.py  test_repositories.py
