[project]
name = "cc-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "groq>=1.1.2",
    "livekit-agents[deepgram,openai,silero,turn-detector]~=1.4",
    "livekit-plugins-groq>=1.5.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
